<resources>
    <string name="app_name">Photos</string>
    <string name="rename">Rename</string>
    <string name="name_of_album">Name of Album</string>
    <string name="location_tag">Location Tag</string>
    <string name="person_tag">Person Tag</string>
    <string name="confirm">Confirm</string>
    <string name="list_of_albums">List of Albums:</string>
    <string name="search_results">Search Results:</string>
    <string name="move">Move</string>
    <string name="delete">Delete</string>
    <string name="list_of_photos">List of Photos:</string>
    <string name="forward"><![CDATA[<]]></string>
    <string name="backward"><![CDATA[>]]></string>
    <string name="slideshow">slideshow</string>
    <string name="filename">filename</string>
    <string name="instruction_separate_each_tag_by_comma">(Instruction: separate each tag by comma)</string>
    <string name="delete_album">delete album</string>
    <string name="textview">TextView</string>
    <string name="delete_photo">delete photo</string>
    <string name="tag_value">Tag Value</string>
    <string name="move_photo">move photo</string>
    <string name="add_tag">add tag</string>
    <string name="delete_tag">delete tag</string>
    <string name="create_a_new_album">Create a New Album</string>
    <string name="enter_a_name_for_the_album">Enter a name for the album</string>
    <string name="list_of_tags">List of Tags:</string>
    <string-array name = "and_or">
        <item>and</item>
        <item>or</item>
    </string-array>
    <string-array name = "tagType">
        <item>location</item>
        <item>person</item>
    </string-array>
</resources>
