<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/locationTag"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/location_tag"
        android:inputType="text" />

    <EditText
        android:id="@+id/personTag"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/locationTag"
        android:ems="10"
        android:hint="@string/person_tag"
        android:inputType="text" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/personTag"
        android:layout_toEndOf="@+id/locationTag"
        android:text="@string/confirm" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="415dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/personTag">

        <TextView
            android:id="@+id/search_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/search_results"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorPrimaryDark" />

        <ListView
            android:id="@+id/photo_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/search_results" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/locationTag"
        android:layout_alignStart="@+id/confirm"
        android:text="@string/instruction_separate_each_tag_by_comma"
        android:textColor="@color/colorPrimaryDark" />

    <Spinner
        android:id="@+id/and_or_spinner"
        android:layout_width="115dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/personTag"
        android:layout_toEndOf="@+id/confirm" />

</RelativeLayout>